api/tests/snapshots/mood_routes__mood_delete_ok.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "message": "Mood entry deleted successfully",
    "status": "success"
  },
  "status": 200
}
