api/tests/snapshots/mood_routes__mood_get_404.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "error": "Entry not found"
  },
  "status": 404
}
