api/tests/snapshots/mood_routes__mood_post_400_bad_date.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "error": "date must be YYYY-MM-DD or M/D/YYYY"
  },
  "status": 400
}
