api/tests/snapshots/mood_routes__mood_post_400_bad_selected_options.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "error": "selected_options must be an array"
  },
  "status": 400
}
