api/tests/snapshots/mood_routes__mood_post_400_missing_fields.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "error": "Missing required fields"
  },
  "status": 400
}
