api/tests/snapshots/mood_routes__mood_post_400_mood_out_of_range.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "error": "Mood must be between 1 and 5"
  },
  "status": 400
}
