api/tests/snapshots/mood_routes__mood_post_created_us_date.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "entry_id": 2,
    "message": "Mood entry created successfully",
    "new_achievements": [],
    "status": "success"
  },
  "status": 201
}
