api/tests/snapshots/mood_routes__mood_put_400_no_fields.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "error": "No update fields provided"
  },
  "status": 400
}
