api/tests/snapshots/mood_routes__mood_put_updated.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "entry": {
      "content": "Updated content.",
      "created_at": "<TS>",
      "date": "2025-08-02",
      "id": 2,
      "mood": 3,
      "selections": [],
      "updated_at": "<TS>"
    },
    "message": "Mood entry updated successfully",
    "status": "success"
  },
  "status": 200
}
